--- a/cerknica_digital_twin/requirements.txt
+++ b/cerknica_digital_twin/requirements.txt
@@ -1,11 +1,11 @@
 streamlit
 numpy
-pandas
 rasterio
 geopandas
+fiona
 folium
 streamlit-folium
 pyproj
 shapely
 lxml
-matplotlib
+streamlit-vertical-slider
